# class_parser

./: .gitignore  Chapitre_5_transcription,_maturation_et_régulation_de_l'adn.docx  Les_molécules_du_vivant.docx  README.md  course.py  course_draft.docx  create_structure.sh  data_structure.md  debug_fragmented_text.py  debug_tree.json  demo_exact_match.py  diagram.mermaid  exact_comparison.py  example_usage.py  helper.py  main.py  migration_example.py  models.py  parsed_pdf_api_calls.py  pdf_extraction.ipynb  pdf_plumber.ipynb  pdf_to_dict.py  pipeline.yaml  poc.ipynb  prompt.py  pyproject.toml  render.yaml  sandbox.ipynb  test.txt  test_comparison.py  test_format.ipynb  test_workflow.ipynb  verify_fix.py
audio_extractor/: __init__.py  audio_processor.py  cli.py  sandbox.ipynb
audio_extractor/transcription/: __init__.py  whisper_client.py
audio_extractor/utils/: __init__.py  config.py
configs/: ch1_sucres_lipides.yaml  ch2_acides_amines_proteines.yaml  ch3_metabolisme_glucides.yaml  ch4_structure_replication_reparation_adn.yaml  ch5_transcription_maturation_regulation.yaml  ch6_code_genetique_traduction.yaml  ch7_1_genome_humain.yaml  ch7_2_techniques_biologie_moleculaire.yaml  cours_1.yaml  cours_1_np.yaml  cours_4.yaml
notebooks/: course_to_docx.ipynb  poc.ipynb
notebooks/volume/: Pilot_filled.docx  fs_template.docx
notebooks/volume/artifacts/: architecture_du_génome_humain_filled.docx  ~$chitecture_du_génome_humain_filled.docx
output/text/: extracted_presentation.txt
pdf_extractor/: README.md  __init__.py  cli.py  course.py  example_usage.py  generator.py  pdf_processor.py  pipeline.py  processor.py  prompt_manager.py  prompt_templates.py  slide_parser.py
src/: __init__.py  __main__.py  api.py  cli.py  course.py  models.py  pipeline.py
src/data_extraction/: __init__.py  content_enricher.py  docx_writer.py  plan_extractor.py  slides_extractor.py
src/llm/: __init__.py  mapping_two_pass.py  outline_one_shot.py  outline_two_pass.py  prompt_manager.py  prompt_templates.py  writer.py
src/llm/prompts/: __init__.py  one_shot.py  one_shot_v1.py  two_pass.py  writer.py
tests/: __init__.py  test_audio_processor.py
volume/templates/: fs_template.docx
