[tool.poetry]
name = "class-parser"
version = "0.1.0"
description = "from class to course"
authors = ["Youssef Janjar <youssef@formascience.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
ffmpeg-python = "^0.2.0"
openai = "^1.0.0"
pydub = "^0.25.1"
python-dotenv = "^1.0.0"
pymupdf = "^1.23.0"
pillow = "^10.0.0"
pypdf2 = "^3.0.1"
pdfplumber = "^0.11.7"
python-docx = "^1.1.0"
tiktoken = "^0.9.0"
pdf2image = "^1.17.0"
pytesseract = "^0.3.13"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
python-multipart = "^0.0.6"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-mock = "^3.10.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"
ipykernel = "^6.30.0"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# [tool.poetry.scripts]
# Scripts removed since audio_extractor folder was deleted

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true 